<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tvAmTitleMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduction_1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/md_theme_light_onBackground"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"/>

    <TextView
        android:id="@+id/tvAmTitleSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_2"
        android:textSize="26sp"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
        android:textColor="@color/md_theme_light_onBackground"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAmTitleMain"
        android:layout_marginTop="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAmImageContainer"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="35dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAmTitleSecondary"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/ivAmPokemonImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pokemons_image">

        </ImageView>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnAmCheckOut"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="200dp"
        android:text="@string/check_out_btn"
        android:layout_height="wrap_content"
        app:icon="@drawable/arrow_right"
        app:iconGravity="end"
        android:textSize="16sp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textColor="@color/md_theme_light_onPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAmImageContainer"
        android:layout_marginTop="50dp">

    </Button>



</androidx.constraintlayout.widget.ConstraintLayout>