<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/md_theme_light_surface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="531dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/pokemonImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvFragmentNameOfPokemon"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="PlaceHolder"
            android:textColor="@color/md_theme_light_onBackground"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewContainer">

        </TextView>

        <androidx.cardview.widget.CardView
            android:id="@+id/typesOfPokemonContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@id/weightOfPokemonContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFragmentNameOfPokemon">

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@string/tv_type"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/typeDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:text="description"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="14sp" />


            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_types"
                app:tint="@color/md_theme_light_tertiary" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weightOfPokemonContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@id/heightOfPokemonContainer"
            app:layout_constraintStart_toEndOf="@id/typesOfPokemonContainer"
            app:layout_constraintTop_toTopOf="@+id/typesOfPokemonContainer">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_weight"
                app:tint="@color/md_theme_light_tertiary" />

            <TextView
                android:id="@+id/weightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@string/tv_weight"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weightDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:text="description"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="14sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/heightOfPokemonContainer"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/md_theme_light_tertiaryContainer"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/weightOfPokemonContainer"
            app:layout_constraintTop_toTopOf="@+id/weightOfPokemonContainer">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_height"
                app:tint="@color/md_theme_light_tertiary" />

            <TextView
                android:id="@+id/heightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="45dp"
                android:text="@string/tv_height"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/heightDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:text="description"
                android:textColor="@color/md_theme_light_tertiary"
                android:textSize="14sp" />

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/btnGoBack"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/go_back_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textSize="16sp"
            app:icon="@drawable/ic_go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightOfPokemonContainer">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>